; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_io.c_gdSeek.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_io.c_gdSeek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { {}* }

@.str = private unnamed_addr constant [11 x i8] c"Seeking...\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gdSeek(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 @gd_error(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @IO_DBG(i32 %5)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = bitcast {}** %8 to i32 (%struct.TYPE_4__*, i32)**
  %10 = load i32 (%struct.TYPE_4__*, i32)*, i32 (%struct.TYPE_4__*, i32)** %9, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 %10(%struct.TYPE_4__* %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @IO_DBG(i32) #1

declare dso_local i32 @gd_error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
